 only the sound plays. Hopefully, later versions of Qt will fix this.
-Added option to control whether media (sound/video) gets started automatically
 when displaying a card.
-Added option to display a media control (play/pause/slider)
-Improved backup scheme. Users can now restore from backups using the 
 File - Open menu, as opposed to first decompressing a file outside of 
 Mnemosyne.
-The learing history is now stored in an SQL database, allowing to calculate
 more statistics.
-The plugin mechanism encompasses also the statistics, configuration and card
 activation screens.
-Cards which are failed during learning ahead are now periodically brought
 back in the learning process.
-Mnemosyne now stores its data in a more standards compliant location: 
 C:/Users/peter/Application Data/Mnemosyne2 under Windows, and 
 /home/pbienst/.local/share/mnemosyne2 and /home/pbienst/.config/mnemosyne2
 under Linux.
-When leaving the program open overnight, the display will update at the
 roll over point.
-Intelligent sorting of categories containing numbers, so that you no longer
 have to call a category 'Lesson 01' instead of 'Lesson '1 to get the correct
 ordering (Mike Appleby).
-Uses Phonon as sound backend instead of PyGame (Louis Cyphre).


-Croatian translation by Ilija Pavlic
-Indonesian translation by Prabowo Murti
-Russian translation by Denis Zhuravlyov
	
Mnemosyne 1.2.2 : 2010-01-29
	
(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-Added support for Tim Bourke's Mnemogogo plugin, which enables you
 to review cards on Java-based phones. See
 http://www.tbrk.org/software/mnemogogo.html
-fix rare hang in preprocessing paths (reported by LooM).
-Remove hidden limit on grade 1 cards.
-Italian translation by Enrico Leoni.
-Turkish translation by Sercan Oruc.
-Updated German translation by Dimitri Scheftner.
-Updated French translation by Christophe Mealares and Yannick Voglaire.
-Hungarian translation by bkile.

	